# django-learning-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml
code/: pyproject.toml
code/accounts/: urls.py  views.py
code/accounts/templates/registration/: login.html  signup.html
code/app/: settings.py  urls.py
code/app/templates/: base.html
code/courses/: admin.py  forms.py  models.py  urls.py  views.py
code/courses/migrations/: 0001_initial.py
code/courses/templates/courses/: chapter.html  course-detail.html  course_cover.html  my-courses.html
code/lib/: butter_cms_client.py  exceptions.py
