[tool.poetry]
name = "course-platform"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Rocher <jeanb.rocher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
buttercms-python = "^1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
reorder-python-imports = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
